tests/data/syntax-errors/a-block-defined-with-braces.star
Origin default (0,0,0) {

}
